[tool.poetry]
name = "dangermode"
version = "0.1.0"
homepage = "https://github.com/rgbkrk/dangermode"
description = "ChatGPT Danger Mode for Jupyter"
authors = ["Kyle Kelley <rgbkrk@gmail.com>"]
readme = "README.md"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "dangermode" },
]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.12.0"
fastapi = "^0.95.0"
jupyter-console = "^6.6.3"


[tool.poetry.group.dev.dependencies]
tox = "^4.4.11"
bump2version = "^1.0.1"
pytest = "^7.2.2"
black = "^23.3.0"
isort = "^5.12.0"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

[tool.tox]
envlist = "py"
skipsdist = true

[testenv]
deps = ["pytest"]
commands = ["pytest"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"